LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <displayFormat>FA-{0000}</displayFormat>
    <label>Invoice No</label>
    <type>AutoNumber</type>
</CustomField>