LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <label>ItemName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>