LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupCity__c.field-meta.xml
<CustomField>
    <fullName>PickupCity__c</fullName>
    <label>PickupCity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>