LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupCountry__c.field-meta.xml
<CustomField>
    <fullName>PickupCountry__c</fullName>
    <label>PickupCountry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>