LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupDateTime__c.field-meta.xml
<CustomField>
    <fullName>PickupDateTime__c</fullName>
    <label>PickupDateTime</label>
    <type>DateTime</type>
</CustomField>