LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PickupPostalCode__c</fullName>
    <label>PickupPostalCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>