LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupProvince__c.field-meta.xml
<CustomField>
    <fullName>PickupProvince__c</fullName>
    <label>PickupProvince</label>
    <length>15</length>
    <type>Text</type>
</CustomField>