LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/PickupStreet__c.field-meta.xml
<CustomField>
    <fullName>PickupStreet__c</fullName>
    <label>PickupStreet</label>
    <length>40</length>
    <type>Text</type>
</CustomField>