LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/Rateperkg__c.field-meta.xml
<CustomField>
    <fullName>Rateperkg__c</fullName>
    <label>Rateperkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>