LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>ShippingCity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>