LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>ShippingCountry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>