LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingDateTime__c.field-meta.xml
<CustomField>
    <fullName>ShippingDateTime__c</fullName>
    <label>ShippingDateTime</label>
    <type>DateTime</type>
</CustomField>