LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>ShippingPostalCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>