LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingProvince__c.field-meta.xml
<CustomField>
    <fullName>ShippingProvince__c</fullName>
    <label>ShippingProvince</label>
    <length>15</length>
    <type>Text</type>
</CustomField>