LWC/Logistic/force-app/main/default/objects/Invoice__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <label>ShippingStreet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>